--- a/views/user/productgrid.ejs
+++ b/views/user/productgrid.ejs
@@ -205,21 +205,30 @@
                     </div>
                     <div class="header-right">
                         <div class="search-style-2">
-                            <form action="#">
-                                <select class="select-active">
-                                    <option>All Categories</option>
-                                    <option>Women's</option>
-                                    <option>Men's</option>
-                                    <option>Cellphones</option>
-                                    <option>Computer</option>
-                                    <option>Electronics</option>
-                                    <option> Accessories</option>
-                                    <option>Home & Garden</option>
-                                    <option>Luggage</option>
-                                    <option>Shoes</option>
-                                    <option>Mother & Kids</option>
-                                </select>
-                                <input type="text" placeholder="Search for items...">
+                            <form action="/gadgetly/shop/">
+                                    <select class="select-active" name="category">
+                                        <option value="">All Categories</option>
+                                       <% if(category && category.length>0){
+                                            category.forEach((category)=>{ %>
+                                                <option value="<%= category._id %>"><%= category.categoryName %></option> 
+                                        <%   })
+                                       } %>
+<!--                                         
+                                        <option>Men's</option>
+                                        <option>Cellphones</option>
+                                        <option>Computer</option>
+                                        <option>Electronics</option>
+                                        <option> Accessories</option>
+                                        <option>Home & Garden</option>
+                                        <option>Luggage</option>
+                                        <option>Shoes</option>
+                                        <option>Mother & Kids</option> -->
+
+                                    </select>
+
+                                
+                                <input type="text"  name="search" placeholder="Search for items..." value='<%= search %>'  >
+                                
                             </form>
                         </div>
                         <div class="header-action-right">
