added pagination and search in shop,userlist,productlist,orderlist

--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -308,10 +308,15 @@
                                 <div class="header-action-2">
                                     <div class="header-action-icon-2">
                                         <a href="/gadgetly/myaccount">
-                                            <img class="svgInject" alt="Evara" src="/assets/imgs/theme/icons/icon-profile.svg">
-                                            <span class="pro-count blue">4</span>
+                                            <img class="svgInject" alt="Evara" src="/assets/imgs/theme/icons/profile.svg">
+                                            
                                         </a>
                                     </div>
+                            </div>
+                            <div class="header-action-2 pl-25">
+                                
+                                <a href="/gadgetly/logout" style="background-color: rgb(0, 0, 0);color: white;" class="btn btn-danger btn-sm"><i class="fi-rs-user"></i>Logout</a>
+                                
                             </div>
                         </div>
                         <% }else{}  %>
