--- a/views/admin/userorders.ejs
+++ b/views/admin/userorders.ejs
@@ -144,15 +144,9 @@
             <div class="col-search">
                 <form class="searchform">
                     <div class="input-group">
-                        <input list="search_terms" type="text" class="form-control" placeholder="Search term">
-                        <button class="btn btn-light bg" type="button"> <i class="material-icons md-search"></i></button>
+                        <input list="search_terms" type="text" name="search" class="form-control" placeholder="Search term">
+                        <button class="btn btn-light bg" type="submit" value="search"> <i class="material-icons md-search"></i></button>
                     </div>
-                    <datalist id="search_terms">
-                        <option value="Products">
-                        <option value="New orders">
-                        <option value="Apple iphone">
-                        <option value="Ahmed Hassan">
-                    </datalist>
                 </form>
             </div>
             <div class="col-nav">
@@ -428,12 +422,15 @@
         <div class="pagination-area mt-30 mb-50">
             <nav aria-label="Page navigation example">
                 <ul class="pagination justify-content-start">
-                    <li class="page-item active"><a class="page-link" href="#">01</a></li>
+                    <% for(i=1; i<=totalPages; i++){ %>
+                        <li class="page-item"><a class="page-link" href="?page=<%= i %>"><%= i %></a></li> 
+                    <% } %> 
+                    <!-- <li class="page-item active"><a class="page-link" href="#">01</a></li>
                     <li class="page-item"><a class="page-link" href="#">02</a></li>
                     <li class="page-item"><a class="page-link" href="#">03</a></li>
                     <li class="page-item"><a class="page-link dot" href="#">...</a></li>
                     <li class="page-item"><a class="page-link" href="#">16</a></li>
-                    <li class="page-item"><a class="page-link" href="#"><i class="material-icons md-chevron_right"></i></a></li>
+                    <li class="page-item"><a class="page-link" href="#"><i class="material-icons md-chevron_right"></i></a></li> -->
                 </ul>
             </nav>
         </div>
