--- a/views/user/productgrid.ejs
+++ b/views/user/productgrid.ejs
@@ -1406,12 +1406,15 @@
                         <div class="pagination-area mt-15 mb-sm-5 mb-lg-0">
                             <nav aria-label="Page navigation example">
                                 <ul class="pagination justify-content-start">
-                                    <li class="page-item active"><a class="page-link" href="#">01</a></li>
+                                    <% for(j=1; j<=totalCount; j++){ %>
+                                        <li class="page-item <% if (currentPage === j) { %>active<% } %>"><a class="page-link" href="?page=<%=j%>"><%=j%></a></li>  
+                                    <% } %>
+                                    <!-- <li class="page-item active"><a class="page-link" href="#">01</a></li>
                                     <li class="page-item"><a class="page-link" href="#">02</a></li>
                                     <li class="page-item"><a class="page-link" href="#">03</a></li>
                                     <li class="page-item"><a class="page-link dot" href="#">...</a></li>
                                     <li class="page-item"><a class="page-link" href="#">16</a></li>
-                                    <li class="page-item"><a class="page-link" href="#"><i class="fi-rs-angle-double-small-right"></i></a></li>
+                                    <li class="page-item"><a class="page-link" href="#"><i class="fi-rs-angle-double-small-right"></i></a></li> -->
                                 </ul>
                             </nav>
                         </div>
