salesreport and pdf dowload added

--- a/views/layout/adminheader.ejs
+++ b/views/layout/adminheader.ejs
@@ -32,7 +32,7 @@
         </div>
         <nav>
             <ul class="menu-aside">
-                <li class="menu-item active">
+                <li class="menu-item ">
                     <a class="menu-link" href="/gadgetly/admin/home"> <i class="icon material-icons md-home"></i>
                         <span class="text">Dashboard</span>
                     </a>
@@ -98,9 +98,14 @@
                         <a href="page-error-404.html">Error 404</a> -->
                     </div>
                 </li>
-                <li class="menu-item active">
+                <li class="menu-item ">
                     <a class="menu-link" href="/gadgetly/admin/userorders"> <i class="icon material-icons md-shopping_cart"></i>
                         <span class="text">UserOrders</span>
+                    </a>
+                </li>
+                <li class="menu-item ">
+                    <a class="menu-link" href="/gadgetly/admin/salesreport"> <i class="icon material-icons md-pie_chart"></i>
+                        <span class="text">Salesreport</span>
                     </a>
                 </li>
                 <!-- <li class="menu-item">
@@ -157,12 +162,12 @@
                       <input list="search_terms" type="text" class="form-control" placeholder="Search term">
                       <button class="btn btn-light bg" type="button"> <i class="material-icons md-search"></i></button>
                   </div>
-                  <datalist id="search_terms">
+                  <!-- <datalist id="search_terms">
                       <option value="Products">
                       <option value="New orders">
                       <option value="Apple iphone">
                       <option value="Ahmed Hassan">
-                  </datalist>
+                  </datalist> -->
               </form>
           </div>
           <% } %>
