--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -16,7 +16,7 @@
                             <span class="icon icon-sm rounded-circle bg-primary-light"><i class="text-primary material-icons md-monetization_on"></i></span>
                             <div class="text">
                                 <h6 class="mb-1 card-title">Revenue</h6>
-                                <span>$13,456.5</span>
+                                <span><%= revenue %></span>
                                 <span class="text-sm">
                                     Shipping fees are not included
                                 </span>
@@ -29,7 +29,7 @@
                         <article class="icontext">
                             <span class="icon icon-sm rounded-circle bg-success-light"><i class="text-success material-icons md-local_shipping"></i></span>
                             <div class="text">
-                                <h6 class="mb-1 card-title">Orders</h6> <span>53.668</span>
+                                <h6 class="mb-1 card-title">Orders</h6> <span><%= orderCount %></span>
                                 <span class="text-sm">
                                     Excluding orders in transit
                                 </span>
@@ -42,7 +42,7 @@
                         <article class="icontext">
                             <span class="icon icon-sm rounded-circle bg-warning-light"><i class="text-warning material-icons md-qr_code"></i></span>
                             <div class="text">
-                                <h6 class="mb-1 card-title">Products</h6> <span>9.856</span>
+                                <h6 class="mb-1 card-title">Products</h6> <span><%= productCount %></span>
                                 <span class="text-sm">
                                     In 19 Categories
                                 </span>
@@ -64,15 +64,15 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-xl-8 col-lg-12">
                     <div class="card mb-4">
                         <article class="card-body">
                             <h5 class="card-title">Sale statistics</h5>
                             <canvas id="myChart" height="120px"></canvas>
                         </article>
-                    </div>
-                    <div class="row">
+                    </div> -->
+                    <!-- <div class="row">
                         <div class="col-lg-5">
                             <div class="card mb-4">
                                 <article class="card-body">
@@ -237,8 +237,8 @@
                         </article>
                     </div>
                 </div>
-            </div>
-            <div class="card mb-4">
+            </div> -->
+            <!-- <div class="card mb-4">
                 <header class="card-header">
                     <h4 class="card-title">Latest orders</h4>
                     <div class="row align-items-center">
@@ -450,7 +450,7 @@
                                 </tbody>
                             </table>
                         </div>
-                    </div> <!-- table-responsive end// -->
+                    </div> table-responsive end//
                 </div>
             </div>
             <div class="pagination-area mt-30 mb-50">
@@ -464,6 +464,6 @@
                         <li class="page-item"><a class="page-link" href="#"><i class="material-icons md-chevron_right"></i></a></li>
                     </ul>
                 </nav>
-            </div>
+            </div> -->
         </section> <!-- content-main end// -->
 <%-include('../layout/adminfooter') %>
