--- a/views/layout/adminheader.ejs
+++ b/views/layout/adminheader.ejs
@@ -37,16 +37,10 @@
                         <span class="text">Dashboard</span>
                     </a>
                 </li>
-                <li class="menu-item has-submenu">
-                    <a class="menu-link" href="page-products-list.html"> <i class="icon material-icons md-shopping_bag"></i>
+                <li class="menu-item ">
+                    <a class="menu-link" href="/gadgetly/admin/productList"> <i class="icon material-icons md-shopping_bag"></i>
                         <span class="text">Products</span>
                     </a>
-                    <div class="submenu">
-                        <a href="/gadgetly/admin/productList">Product List</a>
-                        <!-- <a href="page-products-grid.html">Product grid</a>
-                        <a href="page-products-grid-2.html">Product grid 2</a>
-                        <a href="page-categories.html">Categories</a>
-                    </div> -->
                 </li>
                 <!-- <li class="menu-item has-submenu">
                     <a class="menu-link" href="page-orders-1.html"> <i class="icon material-icons md-shopping_cart"></i>
@@ -58,27 +52,16 @@
                         <a href="page-orders-detail.html">Order detail</a>
                     </div>
                 </li> -->
-                <li class="menu-item has-submenu">
+                <li class="menu-item">
                     <a class="menu-link" href="/gadgetly/admin/categories"> <i class="icon material-icons md-store"></i>
                         <span class="text">Categories</span>
                     </a>
-                    <div class="submenu">
-                        <a href="/gadgetly/admin/categories">Categories</a>
-                        <!-- <a href="page-sellers-list.html">Sellers list</a>
-                        <a href="page-seller-detail.html">Seller profile</a> -->
-                    </div>
                 </li>
                 
-                <li class="menu-item has-submenu">
+                <li class="menu-item">
                     <a class="menu-link" href="/gadgetly/admin/loadAddProduct"> <i class="icon material-icons md-add_box"></i>
                         <span class="text">Add product</span>
                     </a>
-                    <div class="submenu">
-                        <a href="/gadgetly/admin/loadAddProduct">Add product </a>
-                       <!-- <a href="page-form-product-2.html">Add product 2</a>
-                        <a href="page-form-product-3.html">Add product 3</a>
-                        <a href="page-form-product-4.html">Add product 4</a>  -->
-                    </div>
                 </li>
                 <!-- <li class="menu-item has-submenu">
                     <a class="menu-link" href="page-transactions-1.html"> <i class="icon material-icons md-monetization_on"></i>
@@ -89,15 +72,10 @@
                         <a href="page-transactions-2.html">Transaction 2</a>
                     </div>
                 </li> -->
-                <li class="menu-item has-submenu">
-                    <a class="menu-link" href=""> <i class="icon material-icons md-person"></i>
+                <li class="menu-item">
+                    <a class="menu-link" href="/gadgetly/admin/userlist"> <i class="icon material-icons md-person"></i>
                         <span class="text">Users</span>
                     </a>
-                    <div class="submenu">
-                        <a href="/gadgetly/admin/userlist">Users List</a>
-                        <!-- <a href="page-account-register.html">User registration</a>
-                        <a href="page-error-404.html">Error 404</a> -->
-                    </div>
                 </li>
                 <li class="menu-item ">
                     <a class="menu-link" href="/gadgetly/admin/userorders"> <i class="icon material-icons md-shopping_cart"></i>
