--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -256,7 +256,7 @@
             <div class="container">
                 <div class="header-wrap">
                     <div class="logo logo-width-1">
-                        <a href="index.html"><img src="/assets/imgs/theme/logo.svg" alt="logo"></a>
+                        <a href="index.html"><img src="/assets/imgs/theme/funforge_logo.jpg" alt="logo"></a>
                     </div>
                     <div class="header-right">
                       <%if(typeof productSearch !="undefined" && productSearch){ %>
@@ -383,7 +383,7 @@
             <div class="container">
                 <div class="header-wrap header-space-between position-relative">
                     <div class="logo logo-width-1 d-block d-lg-none">
-                        <a href="index.html"><img src="/assets/imgs/theme/logo.svg" alt="logo"></a>
+                        <a href="index.html"><img src="/assets/imgs/theme/funforge_logo.jpg" alt="logo"></a>
                     </div>
                     <div class="header-nav d-none d-lg-flex">
                         <!-- <div class="main-categori-wrap d-none d-lg-block">
